--- a/Public-Offering.Business/Public-Offering.Business.csproj
+++ b/Public-Offering.Business/Public-Offering.Business.csproj
@@ -8,7 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Public-Offering.WebApi\Public-Offering.WebApi.csproj" />
+    <PackageReference Include="Autofac" Version="7.0.1" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Public-Offering.Core\Public-Offering.Core.csproj" />
+    <ProjectReference Include="..\Public-Offering.DataAccess\Public-Offering.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
