--- a/PublicOffering.WebApi/PublicOffering.WebApi.csproj
+++ b/PublicOffering.WebApi/PublicOffering.WebApi.csproj
@@ -4,16 +4,16 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Public_Offering.WebApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Public-Offering.Business\Public-Offering.Business.csproj" />
   </ItemGroup>
 
 </Project>
